python/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
spec:
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: python
          image: python
          ports:
            - containerPort: 8000
