python/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: python
spec:
  rules:
  - host: python.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: python
          servicePort: http
